--- a/dinov3/eval/segmentation/configs/config-ade20k-m2f-training.yaml
+++ b/dinov3/eval/segmentation/configs/config-ade20k-m2f-training.yaml
@@ -1,11 +1,11 @@
-# Config for ade20k, linear training
+# Config for ADE20K, Mask2Former training
 
-bs: 2 # batch_size
+bs: 2
 n_gpus: 8
 metric_to_save: 'mIoU'
-model_dtype: FLOAT32
+model_dtype: BFLOAT16
 scheduler:
-  total_iter: 40000
+  total_iter: 160000
   type: 'WarmupOneCycleLR'
   constructor_kwargs:
     warmup_iters: 1500
@@ -16,25 +16,28 @@ scheduler:
     use_beta1: False
     update_momentum: False
 optimizer:
-  lr : 1e-3
+  lr: 1e-4
   beta1: 0.9
   beta2: 0.999
-  weight_decay: 1e-3
-  gradient_clip: 'inf'
+  weight_decay: 0.05
+  gradient_clip: 0.01
 datasets:
-  root: ""  # Path to the ADE20K dataset
+  root: "/data_B/xujialiu/projects/dinov3/ADEChallengeData2016"
   train: "ADE20K:split=TRAIN"
   val: "ADE20K:split=VAL"
-train:
-  diceloss_weight: 0.0
-  celoss_weight: 1.0
 decoder_head:
-  type: "linear"
-  backbone_out_layers: LAST
-  use_cls_token: False
-  use_batchnorm: True
-  use_backbone_norm: True
+  type: "m2f"
+  backbone_out_layers: FOUR_EVEN_INTERVALS
   num_classes: 150
+  hidden_dim: 2048
+m2f_train:
+  num_points: 12544
+  oversample_ratio: 3.0
+  importance_sample_ratio: 0.75
+  mask_coefficient: 5.0
+  dice_coefficient: 5.0
+  class_coefficient: 2.0
+  no_object_coefficient: 0.1
 transforms:
   train:
     img_size: 512
@@ -42,12 +45,13 @@ transforms:
     crop_size: [512, 512]
     flip_prob: 0.5
   eval:
-    img_size: 512
+    img_size: 896
+    tta_ratios: [1.0]
 eval:
   compute_metric_per_image: False
   reduce_zero_label: True
   mode: "slide"
-  crop_size: 512
-  stride: 341
+  crop_size: 896
+  stride: 596
   eval_interval: 5000
   use_tta: False
