m2f training code completed

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ dist/
 
 ADEChallengeData2016
 ADEChallengeData2016*
+
+MultiScaleDeformableAttention.cpython-311-x86_64-linux-gnu.so
+
+test_*.ipynb
